fixed: project cards layout to be responsive on smaller screens

--- a/about-me/src/app/project/page.module.css
+++ b/about-me/src/app/project/page.module.css
@@ -32,4 +32,5 @@
   margin-top: 30px;
   display: flex;
   gap: 35px;
+  flex-wrap: wrap;
 }
